[workspace]
members = [ "common", "ssr" ]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "=0.2.92"
js-sys = "0.3.68"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Worker",
    "WorkerGlobalScope",
    "PushEvent",
    "PushMessageData",
] }
log = "0.4"
simple_logger = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = { version = "0.11.0", features = ["worker", "futures"] }
console_log = "1"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
